# Generic_A_star

./: .gitignore  LICENSE  Makefile  README.md  astar.h  main.cpp
examples/: 8puzzle.cpp  grid.cpp
src/: CMakeLists.txt  Config.cmake.in  Makefile
src/examples/: grid.cpp  knight.cpp
